migration/4-add_http_route/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: "demo"
  namespace: demo
spec:
  hostnames:
    - "demo.example.com"
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: "demo"
          port: 8080
